cabal-version:      2.4
name:               bombus-cloud
version:            0.1.0.0
author:             bumbledbees
maintainer:         sam@bombus.cloud
synopsis:           static site generator for bombus.cloud
homepage:           https://www.bombus.cloud
bug-reports:        https://github.com/bumbledbees/bombus.cloud
-- license:
-- license-file:

common shared-properties
    default-language:   Haskell2010
    build-depends:      base ^>=4.16.4.0
    ghc-options:        -Wall

library
    import: shared-properties
    exposed-modules:
        BombusHtml,
        BombusCss
    build-depends:
        text,
        lucid2,
        clay
    default-extensions:
        OverloadedStrings,
        ExtendedDefaultRules
    hs-source-dirs:   src

executable bombus-cloud
    import: shared-properties
    build-depends:
        directory,
        filepath,
        bombus-cloud
    main-is:          Main.hs
    hs-source-dirs:   app
